# dead-ringer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
examples/: README.md  generate.py
src/: app.rs  clipboard.rs  display.rs  event.rs  file.rs  handler.rs  main.rs  search.rs  tui.rs  ui.rs  viewer.rs
