[package]
name = "dead-ringer"
version = "0.1.0"
edition = "2021"
description = "Dring, A Binary Diff Utility"
authors = ["Zackary Troop"]

[[bin]]
name = "dring"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["cargo"] }
tui = { version = "0.19.0", features = ["crossterm"] }
crossterm = "0.27"